test/files/neg/t2078.check
t2078.scala:2: error: contravariant type S occurs in covariant position in type => AnyRef{val x: S} of value f
  val f  = new { val x = y }
      ^
one error found
